added placeholder db query

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,9 @@
       <form action="success" method="post">
         <input title="Username" placeholder="tigeer" name="username" required>
       </form>
+      <div>
+        <p>{{text}}</p>
+      </div>
     </div>
   </body>
 </html>
