--- a/templates/failure.html
+++ b/templates/failure.html
@@ -1,7 +1,6 @@
 {% extends "index.html" %}
 {% block content %}
-<div>
-  <p>User: {{user}} </p>
-  <p>Stance: {{stance}} </p>
+<div class="errorclass">
+  <p>Error: {{ error }}</p>
 </div>
 {% endblock %}
