--- a/static/main.css
+++ b/static/main.css
@@ -1,7 +1,144 @@
+:root {
+  --primary-color: #432E30;
+  --primary-color-light: #8E7474;
+  --accent-color: #FE6A6B;
+  --accent-color-light: #FFE4E4;
+  --accent-color-dark: #B94B4C;
+  --white-color: #FAFBFC;
+  --light-gray-color: #C6CBD1;
+  --medium-gray-color: #959DA5;
+  --dark-gray-color: #444D56;
+  --bg-color: #F8F8FA;
+  --code-bg-color: #F0E8E8;
+}
+
+body {
+  background-color: var(--light-gray-color);
+  font-family: 'Open Sans', sans-serif;
+}
+
+.proper_title {
+  font-family: "Bungee";
+  line-height: 200%;
+  font-size: 200%;
+  background: url("4col.png");
+  background-position: center;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+a, a:hover {
+  text-decoration: none;
+  color: var(--primary-color);
+}
+
+.input-group--username {
+  position: relative;
+}
+
+.input-group {
+  font-size: 0;
+}
+
+.username-input {
+  font-size: 1.1rem !important;
+  padding: 0.8rem 1rem !important;
+  background: rgba(0, 10, 25, 0.3);
+  border: 1px solid rgba(0, 10, 25, 0.3);
+  border-bottom-color: rgba(0, 10, 25, 0.4);
+  box-shadow: 0 5px 12px -2px rgba(0, 0, 0, 0.3);
+  font-weight: 300;
+  color: #cfd9e6;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+  outline: inherit;
+  position: relative;
+}
+.username-input:hover {
+    box-shadow: 0 0 30px -2px rgba(0, 0, 0, 0.3);
+    z-index: 0;
+}
+.username-input:focus {
+    z-index: 0;
+    background: rgba(0, 0, 0, 0.3);
+    color: white;
+}
+
+.btn {
+  background: rgba(0, 10, 25, 0.3);
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  border-bottom-color: rgba(0, 0, 0, 0.4);
+  box-shadow: 0 5px 12px -2px rgba(0, 0, 0, 0.3);
+  color: #61efa7;
+  text-transform: uppercase;
+  font-size: 1.1rem !important;
+  padding: 0.8rem 1rem !important;
+  cursor: pointer;
+  z-index: 1;
+  outline: inherit;
+  position: relative;
+}
+.btn:disabled {
+    background: rgba(0, 0, 0, 0.3);;
+}
+.btn:hover {
+    background: rgba(0, 0, 0, 0.3);
+    color: white;
+    z-index: 1;
+}
+.btn:active {
+    background: rgba(0, 0, 0, 0.3);;
+    color: white;
+}
+.btn:focus {
+    box-shadow: 0 0 0 2px rgba(153, 236, 167, 0.5);
+}
+
 .container {
   margin: 0 auto;
   width: 100%;
   height: 100%;
   text-align: center;
   margin-top: 80px;
+  outline: none;
+}
+
+.errorclass {
+  color: #D42040;
+}
+
+/* links */
+.link {
+  text-decoration: none;
+  transition: all 0.3s ease-out;
+}
+
+.link:hover {
+  color: var(--accent-color);
+}
+
+.link--dark {
+  color: var(--primary-color);
+}
+
+.link--light {
+  color: var(--accent-color);
+}
+
+/* menu */
+nav {
+  display: grid;
+  grid-template-columns: 70px auto;
+}
+
+.menu {
+  margin: 0;
+  text-align: right;
+  overflow: hidden;
+  list-style: none;
+}
+
+.toggle {
+  display: none;
+  position: relative;
 }
