--- a/static/main.css
+++ b/static/main.css
@@ -99,8 +99,24 @@ a, a:hover {
   width: 100%;
   height: 100%;
   text-align: center;
-  margin-top: 80px;
+  margin-top: 10px;
   outline: none;
+}
+
+table.center {
+  margin-top: 60px;
+  margin-left:auto;
+  margin-right:auto;
+  font-size: 20px;
+  }
+
+td {
+  text-align: center;
+  padding: 5px;
+  padding-left: 30px;
+  padding-right: 30px;
+  background: rgba(0, 10, 25, 0.3);
+  border: 1px solid rgba(0, 0, 0, 0.3);
 }
 
 .errorclass {
@@ -136,6 +152,7 @@ nav {
   text-align: right;
   overflow: hidden;
   list-style: none;
+  font-size: 30px;
 }
 
 .toggle {
