--- a/static/main.css
+++ b/static/main.css
@@ -6,10 +6,7 @@
   --accent-color-dark: #B94B4C;
   --white-color: #FAFBFC;
   --light-gray-color: #C6CBD1;
-  --medium-gray-color: #959DA5;
-  --dark-gray-color: #444D56;
   --bg-color: #F8F8FA;
-  --code-bg-color: #F0E8E8;
 }
 
 body {
@@ -18,10 +15,12 @@ body {
 }
 
 .proper_title {
+  text-align: center;
   font-family: "Bungee";
   line-height: 200%;
-  font-size: 200%;
+  font-size: 2vw;
   background: url("4col.png");
+  background-size: 50vw;
   background-position: center;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -32,11 +31,9 @@ a, a:hover {
   color: var(--primary-color);
 }
 
-.input-group--username {
-  position: relative;
-}
-
+/* input form */
 .input-group {
+  position: relative;
   font-size: 0;
 }
 
@@ -53,7 +50,9 @@ a, a:hover {
   border-bottom-right-radius: 0;
   outline: inherit;
   position: relative;
+  z-index: 0;
 }
+
 .username-input:hover {
     box-shadow: 0 0 30px -2px rgba(0, 0, 0, 0.3);
     z-index: 0;
@@ -65,21 +64,21 @@ a, a:hover {
 }
 
 .btn {
+  font-size: 1.1rem !important;
+  padding: 0.8rem 1rem !important;
   background: rgba(0, 10, 25, 0.3);
   border: 1px solid rgba(0, 0, 0, 0.3);
   border-bottom-color: rgba(0, 0, 0, 0.4);
   box-shadow: 0 5px 12px -2px rgba(0, 0, 0, 0.3);
   color: #61efa7;
   text-transform: uppercase;
-  font-size: 1.1rem !important;
-  padding: 0.8rem 1rem !important;
   cursor: pointer;
   z-index: 1;
   outline: inherit;
   position: relative;
 }
 .btn:disabled {
-    background: rgba(0, 0, 0, 0.3);;
+    background: rgba(0, 0, 0, 0.3);
 }
 .btn:hover {
     background: rgba(0, 0, 0, 0.3);
@@ -87,7 +86,7 @@ a, a:hover {
     z-index: 1;
 }
 .btn:active {
-    background: rgba(0, 0, 0, 0.3);;
+    background: rgba(0, 0, 0, 0.3);
     color: white;
 }
 .btn:focus {
@@ -152,10 +151,30 @@ nav {
   text-align: right;
   overflow: hidden;
   list-style: none;
-  font-size: 30px;
+  font-size: 3vw;
 }
 
 .toggle {
   display: none;
   position: relative;
+}
+
+@media only screen and (max-width: 600px) {
+  .proper_title {
+    font-size: 5vw;
+    background-size: 70vw;
+
+  }
+  .menu {
+    font-size: 5vw;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .username-input {
+    padding: 0.8rem 0.8vw !important;
+  }
+  .btn {
+    padding: 0.8rem 0.8vw !important;
+  }
 }
