--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
     <link href="../static/main.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Open+Sans&display=swap" rel="stylesheet">
+    <meta content="width=device-width, initial-scale=1" name="viewport">
   </head>
   <body>
     <nav>
@@ -14,14 +15,15 @@
         <li class="menu__item"><a href="https://github.com/0xTiger/reddit-stance-classifier" class="link link--dark"><i class="fa fa-github"></i> Github</a></li>
       </ul>
     </nav>
+    <div class="proper_title">
+      <h1> Political leaning <br> prediction</h1>
+    </div>
     <div class="container">
-      <div class="proper_title">
-        <h1> Political leaning <br> prediction</h1>
-      </div>
+
       <form action="pred" method="post" id="find_user">
-        <div class="input-group input-group-lg input-group--username">
-          <input type="text" name="username" placeholder="username" aria-describedby="u-addon" autocapitalize="off" autocorrect="off" autocomplete="off" class="form-control username-input">
-          <span class="input-group-btn"><button type="submit" class="btn btn-secondary" form="find_user" value="Submit">Predict</button></span>
+        <div class="input-group">
+          <input type="text" name="username" placeholder="username" autocapitalize="off" autocorrect="off" autocomplete="off" class="form-control username-input">
+          <span class="input-group-btn"><button type="submit" class="btn" form="find_user" value="Submit">Predict</button></span>
         </div>
       </form>
       {% block content %}
