--- a/templates/failure.html
+++ b/templates/failure.html
@@ -1,5 +1,5 @@
-{% extends "index.html" %}
-{% block content %}
+{% extends "home.html" %}
+{% block info %}
 <div class="errorclass">
   <p>Error: {{ error }}</p>
 </div>
