--- a/templates/success.html
+++ b/templates/success.html
@@ -1,5 +1,5 @@
-{% extends "index.html" %}
-{% block content %}
+{% extends "home.html" %}
+{% block info %}
 <div>
   <table cellspacing="0" class="center">
     <tr>
