--- a/static/main.css
+++ b/static/main.css
@@ -53,6 +53,33 @@ a, a:hover {
   z-index: 0;
 }
 
+/* Tooltip container */
+.tooltip {
+  position: relative;
+  display: inline-block;
+}
+
+/* Tooltip text */
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 240px;
+  background-color: rgba(0, 10, 25, 0.3);
+  color: #fff;
+  text-align: center;
+  padding: 5px 0;
+  border-radius: 6px;
+  font-size: 1rem;
+  /* Position the tooltip text */
+  position: absolute;
+  z-index: 1;
+}
+
+/* Show the tooltip text when you mouse over the tooltip container */
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+}
+
+
 .username-input:hover {
     box-shadow: 0 0 30px -2px rgba(0, 0, 0, 0.3);
     z-index: 0;
