--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,7 @@
 <title>Reddit stance classifier</title>
   <head>
     <link href="../static/main.css" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!--link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"-->
     <script src="https://kit.fontawesome.com/aec1d7a3b7.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Open+Sans&display=swap" rel="stylesheet">
