embed dashapp into site

--- a/templates/about.html
+++ b/templates/about.html
@@ -14,7 +14,9 @@
     <p>I hope to implement the use of more features. The use of NLP could be promising to enhance predictions in cases where users have only few comments available. </p>
   </li>
 </ul>
-
-
+<div style="position:relative; width: 90vw;height:90vw;">
+  <iframe src="/plots" frameborder="0"
+    style="position:absolute;top:0;left:0;width: 100%;height:100%;"></iframe>
+</div>
 
 {% endblock %}
