feat: make CompassChart responsive

--- a/templates/success.html
+++ b/templates/success.html
@@ -14,7 +14,9 @@
         <span class="tooltiptext">The probability that the prediction is correct for the respective axis. This is not a measure of magnitude of position</span>
       </div></td>
       <td>
-        <canvas width=200 height=200 id="CompassChart"></canvas>
+        <div class="chart-container">
+          <canvas id="CompassChart" width=1 height=1></canvas>
+      </div>
       </td>
     </tr>
   </table>
