--- a/static/main.css
+++ b/static/main.css
@@ -143,7 +143,7 @@ table.center {
   margin-left:auto;
   margin-right:auto;
   font-size: 20px;
-  }
+}
 
 td {
   text-align: center;
@@ -244,4 +244,10 @@ nav {
   .btn {
     padding: 0.8rem 0.8vw !important;
   }
+}
+
+.chart-container {
+  position: relative;
+  height: 30vmin;
+  width: 30vmin;
 }
