--- a/templates/traffic.html
+++ b/templates/traffic.html
@@ -8,11 +8,11 @@
 <script>
   
   const freq = {{traffic_frequency | tojson }};
-  const labels = [0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23];
+  const labels = {{traffic_labels | tojson }};
   const data = {
     labels: labels,
     datasets: [{
-      label: 'Hourly Traffic Frequency',
+      label: 'Traffic Frequency',
       fill: 'origin',
       data: freq,
     }]
