feat: add subreddits page

--- a/static/main.css
+++ b/static/main.css
@@ -177,6 +177,9 @@ div#loading {
   text-align: center;
 }
 
+table#subreddits {
+  margin: auto;
+}
 @keyframes spin {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
