feat: add subreddits menu item

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,7 @@
       <div class="logo"><a href="/"><img src="../static/centrist.png"></a></div>
       <ul class="menu">
         <div class="menu__item toggle"><span></span></div>
+        <li class="menu__item"><a href="/subreddits" class="link link--dark"><i class="fa fa-users"></i> Subreddits</a></li>
         <li class="menu__item"><a href="/about" class="link link--dark"><i class="fas fa-scroll"></i> About</a></li>
         <li class="menu__item"><a href="https://github.com/0xTiger/reddit-stance-classifier" class="link link--dark"><i class="fa fa-github"></i> Github</a></li>
       </ul>
