feat: add tooltip for subreddits

--- a/templates/success.html
+++ b/templates/success.html
@@ -11,7 +11,7 @@
     </tr>
     <tr>
       <td><p>Compass<br>Position:</p><div class="tooltip"><i class="fas fa-info-circle"></i>
-        <span class="tooltiptext">The probability that the prediction is correct for the respective axis. This is not a measure of magnitude of position</span>
+        <span class="tooltiptext" style="width: 240px">Prediction is based on the stances of users who comment on similar subreddits. See <li class="menu__item"><a href="/about" class="link link--dark"><i class="fas fa-scroll"></i> About</a></li> for more info</span>
       </div></td>
       <td>
         <div class="chart-container">
