--- a/templates/home.html
+++ b/templates/home.html
@@ -11,7 +11,7 @@
 // ]]></script>
   <form action="pred" method="post" id="find_user" onsubmit="loading()">
     <div class="input-group">
-      <input type="text" name="username" placeholder="username" autocapitalize="off" autocorrect="off" autocomplete="off" class="form-control username-input">
+      <input type="text" name="username" placeholder="username" autocapitalize="off" autocorrect="off" autocomplete="off" class="form-control search-bar">
       <span class="input-group-btn"><button type="submit" class="btn" form="find_user" value="Submit">Predict</button></span>
     </div>
   </form>
