feat: add contact info, rm dash plot

--- a/templates/about.html
+++ b/templates/about.html
@@ -13,10 +13,9 @@
     <h2>Future improvements</h2>
     <p>I hope to implement the use of more features. The use of NLP could be promising to enhance predictions in cases where users have only few comments available. </p>
   </li>
+  <li>
+    <h2>Contact Me</h2>
+    If you have any questions you can contact me at <a href="mailto:me@tom.cv" class="link link--dark"><i class="fa fa-envelope"></i> me@tom.cv</a> :)
+  </li>
 </ul>
-<div style="position:relative; width: 90vw;height:90vw;">
-  <iframe src="/plots" frameborder="0"
-    style="position:absolute;top:0;left:0;width: 100%;height:100%;"></iframe>
-</div>
-
 {% endblock %}
